<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single"
        android:id="@+id/navDrawer">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/add_person_foreground"
            android:title="@string/menu_addd" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/delete_person_foreground"
            android:title="@string/menu_delete" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/list_foreground"
            android:title="@string/menu_list" />
        <item
            android:id="@+id/nav_tools"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/menu_services" />
        <item
            android:id="@+id/nav_share"
            android:icon="@drawable/logout_foreground"
            android:title="@string/menu_logout" />
    </group>
</menu>
